# customer-support-mcp-assistant

./: .env.example  .gitignore  README.md  prod-readiness.md  pyproject.toml
app/: config.py  main.py
app/domain/: models.py
app/infrastructure/: guardrails.py  input_validator.py  logging_config.py  support_mcp_client.py  tracing_config.py
app/services/: support_assistant_service.py  tool_planner.py
mcp_server/: support_server.py
tests/: test_support_assistant_service.py  test_support_mcp_client.py  test_tool_planner.py
